# axum_sqlx_crud

./: .env  Cargo.toml  README.md
src/: main.rs
src/api/v1/: items.rs  mod.rs
src/db/: mod.rs
src/error/: mod.rs
src/middleware/: pagination.rs
src/models/: mod.rs
