[package]
name = "axum_sqlx_crud"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.2" } # Updated version 
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid"] }
async-trait = "0.1"
http = "1.1.0"
dotenv = "0.15.0"